# vpnhide-zygisk

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-zip.sh  build.rs
.github/docker/ci/: Dockerfile
.github/workflows/: build.yml  ci-image.yml
module/: customize.sh  module.prop
module/webroot/: index.html
src/: filter.rs  hooks.rs  lib.rs  maps.rs  shadowhook.rs
