[package]
name = "vpnhide_zygisk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "0BSD"
description = "Zygisk module (native libc hooks) that hides an active VPN from selected Android apps."
repository = "https://github.com/okhsunrog/vpnhide-zygisk"

[lib]
# Zygisk loads the module as an Android shared library. Name must match
# what customize.sh places at /data/adb/modules/<id>/zygisk/arm64-v8a.so
name = "vpnhide_zygisk"
crate-type = ["cdylib"]

[dependencies]
# Zygisk API bindings (targeting v5 to match NeoZygisk)
zygisk-api = { git = "https://github.com/rmnscnce/zygisk-api-rs.git" }
libc = "0.2"
jni = { version = "0.21", default-features = false }
log = { version = "0.4.29", default-features = false }
android_logger = { version = "0.15.1", default-features = false }

# Compile-time log level. `log` statically elides any call below the
# selected ceiling, so disabled levels add zero runtime cost and zero
# code size. Exactly one `log-*` feature must be enabled; default is
# `log-info`. Override with e.g.:
#   cargo ndk -t arm64-v8a build --release --no-default-features --features log-debug
[features]
default = ["log-info"]
log-off   = ["log/release_max_level_off"]
log-error = ["log/release_max_level_error"]
log-warn  = ["log/release_max_level_warn"]
log-info  = ["log/release_max_level_info"]
log-debug = ["log/release_max_level_debug"]
log-trace = ["log/release_max_level_trace"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
# Zygisk modules are very small — keep them tiny.

[profile.dev]
opt-level = 1
panic = "abort"

[build-dependencies]
cmake = "0.1.58"
